# softwareRenderer

./: .gitignore  CMakeLists.txt  Camera.d  Makefile  Mesh.d  Object.d  Quaternion.d  README.md  Render.d  Scene.d  Transform.d  Vector2.d  Vector3.d  Window.d  main.cpp  main.d  obj_read.d  out  read.c
include/: Camera.hpp  DirectionalLight.hpp  Image.hpp  Light.hpp  Mesh.hpp  Object.hpp  PointLight.hpp  Quaternion.hpp  Render.hpp  Scene.hpp  Singleton.hpp  Transform.hpp  Vector2.hpp  Vector3.hpp  Window.hpp  obj_read.hpp
monkey/: faces.py  faces.txt  monkey.blend  monkey.blend1  new_faces.txt  new_normals.txt  new_vertices.txt  normals.py  normals.txt  vertices.py  vertices.txt
src/: Camera.cpp  DirectionalLight.cpp  Image.cpp  Light.cpp  Mesh.cpp  Object.cpp  PointLight.cpp  Quaternion.cpp  Render.cpp  Scene.cpp  Transform.cpp  Vector2.cpp  Vector3.cpp  Window.cpp  main.cpp  obj_read.cpp
